# first_django_project

./: .gitignore  Dockerfile  demo.py  devices.csv  docker-compose.yaml  pyproject.toml  queries.sql  requirements.txt
my_site/: db.sqlite3  log.txt  requirements.txt  shopapp-products-fixtures.xml  textfile_Q9XpdxU.txt
my_site/BlogApp/: admin.py  forms.py  models.py  urls.py  views.py
my_site/BlogApp/migrations/: 0001_initial.py  0002_alter_article_options_alter_article_pub_date.py  0003_alter_article_options_alter_article_author_and_more.py  0004_author_user.py  0005_remove_author_user_alter_article_pub_date_and_more.py  0006_alter_article_pub_date.py
my_site/my_site/: settings.py  sitemaps.py  urls.py  wsgi.py
my_site/myapiapp/: serializers.py  urls.py  views.py
my_site/myauth/: forms.py  models.py  tests.py  urls.py  views.py
my_site/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
my_site/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
my_site/rss_news/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
my_site/rss_news/migrations/: 0001_initial.py
my_site/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  permissions.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
my_site/shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  users-fixtures.json
my_site/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  (+5 more)
(+52 files in other folders)
