[tool.poetry]
name = "my-site"
version = "0.1.0"
description = ""
authors = ["wishka <roucke@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.5"
django-ratelimit = "^4.1.0"
drf-spectacular = "^0.27.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^21.2.0"
inflection = "^0.5.1"
jsonschema = "^4.20.0"
jsonschema-specifications = "^2023.12.1"
jinja2 = "^3.1.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
